--- a/style.css
+++ b/style.css
@@ -35,3 +35,17 @@ p{
 .half-width-div img{
     width:80%;
 }
+h2{
+    font-size: 45px;
+    font-weight: bold;
+}
+#myself-area{
+    background-image: url(images/shapes/7.png);
+    margin-top: 50px;
+    background-repeat: no-repeat;
+}
+#our-foods{
+    width:50%;
+    margin-left:25%;
+    text-align: center;
+}
