--- a/style.css
+++ b/style.css
@@ -1,6 +1,47 @@
+
 #main-container{
     width:100%;
     font-family: 'Kanit', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+#bannar{
+    width: 100%;
+    background-image: url(images/shapes/Frame\ 57.jpg);
+    height: 80px;
+    margin-bottom: 20px;
+}
+
+#logo-area{
+    width: 5%;
+    padding-left: 20px;
+    margin-right: 10px;
+}
+
+#search-area{
+    
+    width: 85%;
+    margin:10px;
+    padding:10px;
+}
+#search-area p{
+    font-size: 25px;
+    margin:0 10px;
+    padding:0 5px;
+    word-spacing: 5px;
+}
+#search-area input{
+    margin:0 15px;
+    padding:0 15px;
+    word-spacing: 10px;
+}
+
+#user-related-area{
+    width:10%;
+    word-spacing: 10px;
+    margin:0 25px;
+    padding: 0 10px;
 }
 .flexible-display{
     display: flex;
@@ -18,10 +59,6 @@
 .orange-color-font{
     color:orange;
     font-weight: bold;
-}
-
-p{
-    margin-bottom: 25px;
 }
 
 .link-button{
@@ -49,7 +86,7 @@ h2{
     margin-left:25%;
     text-align: center;
 }
-.food-item{
+#food-item{
     margin: 20px 2.5%;
 }
 .one-third-div{
@@ -57,6 +94,7 @@ h2{
     padding: 10px 5px;
     margin: 30px 2%;
     border-radius: 15px;
+    text-align: center;
 }
 .box-shadow-div{
     box-shadow: 5px 5px 20px gray;
@@ -67,10 +105,44 @@ h2{
     border-radius: 15px;
     margin: 0 4%;
 }
-h3{
-    text-align: center;
+#bottom-area{
+    margin:20px 4%;
+    border-radius: 15px;
+    background-image: url(images/shapes/Frame\ 58.jpg);
 }
 
-h4{
+#social-media-area{
+    width:65%;
+    margin: 20px;
     text-align: center;
+    padding-left: 20px;
+}
+.social-media-icon{
+    font-size: 80px;
+    padding-left: 50px;
+}
+
+.youtue-icon{
+    color:red;
+}
+#feedback-area{
+    width:27%;
+    margin: 25px;
+    padding-left: 25px;
+}
+label{
+    width: 100px;
+}
+#footer-area{
+    color: white;
+    background-color: black;
+    width: 100%;
+    height: 200px;
+    margin: 0;
+    text-align: center;
+    padding-top: 25px;
+    margin-top:80px;
+}
+#grey-color-font{
+    color: gray;
 }
