--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@
     font-size: 25px;
     margin:0 10px;
     padding:0 5px;
-    word-spacing: 5px;
 }
 #search-area input{
     margin:0 15px;
@@ -40,8 +39,9 @@
 #user-related-area{
     width:10%;
     word-spacing: 10px;
-    margin:0 25px;
+    margin:0 20px;
     padding: 0 10px;
+    font-size: 20px;
 }
 .flexible-display{
     display: flex;
